--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "my-app",
+  "name": "react-memory-game",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://blaws006.github.io",
+  "homepage": "https://blaws006.github.io/react-memory-game",
   "dependencies": {
     "gh-pages": "^2.0.1",
     "react": "^16.8.3",
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
